# Fed_DiffusionDet

./: .gitignore
fl_yolo/: app_train_kitti.sh  partition_real.py  plot_fl.py  pyproject.toml  run_job_eval.sh
fl_yolo/configs/: diffdet.kitti.res50.fl.yaml  diffdet_config.yaml
fl_yolo/datasets/: Car_dataset.yaml  Cyclist_dataset.yaml  Pedestrian_dataset.yaml  Tram_Sitting_dataset.yaml  Truck_dataset.yaml  Van_dataset.yaml
fl_yolo/datasets_iid/: client_0.yaml  client_1.yaml  client_2.yaml  client_3.yaml  client_4.yaml  client_5.yaml  global.yaml
fl_yolo/final_outputs/yolo_kitti_iid_r100e1/client_0/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e1/client_1/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e1/client_2/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e1/client_3/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e1/client_4/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e1/client_5/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e5/client_0/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e5/client_1/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e5/client_2/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e5/client_3/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e5/client_4/: args.yaml  results.csv
fl_yolo/final_outputs/yolo_kitti_iid_r100e5/client_5/: args.yaml  (+1 more)
fl_yolo/fl_yolo/: __init__.py  client_app.py  server_app.py  task.py
fl_yolo/util/: create_yaml.py  global_eval.py  kitti_dist.py  kitti_to_yolo.py  partition_iid_yolo.py
(+101 files in other folders)
